--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 locale                   : "en-US"
 title                    : "Mohit Sinha"
 title_separator          : "-"
-name                     : &name "Mohit Sinha"
-description              : &description "PhD Candidate at University of Minnesota"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+#name                     : &name "Mohit Sinha"
+#description              : &description "PhD Candidate at University of Minnesota"
+#url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "filhaal/filhaal.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Mohit Sinha"
-  avatar           : "profile.png"
+  avatar           : "profile_filhaal.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
