--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Mohit Sinha"
-  avatar           : "profile_filhaal.jpg"
+  avatar           : "profile_filhaal.JPG"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
