--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ author:
   name             : "Mohit Sinha"
   avatar           : "profile_filhaal.JPG"
   bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  location         : "Minneapolis"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=bIhJ-UkAAAAJ&hl=en&authuser=2""
   email            :
   uri              :
   bitbucket        :
@@ -98,13 +98,13 @@ author:
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  #orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  #twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
