--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   bio              : "Your biography for the left-hand sidebar"
   location         : "Minneapolis"
   employer         :
-  googlescholar    : "https://scholar.google.com/citations?user=bIhJ-UkAAAAJ&hl=en&authuser=2""
+  googlescholar    : "https://scholar.google.com/citations?user=bIhJ-UkAAAAJ&hl=en&authuser=2"
   email            :
   uri              :
   bitbucket        :
