--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ analytics:
 # Site Author
 author:
   name             : "Mohit Sinha"
-  avatar           : "profile_filhaal.JPG"
-  bio              : "Your biography for the left-hand sidebar"
+  avatar           : "profile_filhaal.png"
+  bio              : "PhD Candidate, Electrical Engineering"
   location         : "Minneapolis"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=bIhJ-UkAAAAJ&hl=en&authuser=2"
