--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Mohit Sinha"
-  avatar           : "profile_filhaal.png"
+  avatar           : "profile_filhaal.jpg"
   bio              : "PhD Candidate, Electrical Engineering"
   location         : "Minneapolis"
   employer         :
