--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Mohit Sinha"
   avatar           : "profile_filhaal.jpg"
-  bio              : "PhD Candidate, Electrical Engineering"
+  bio              : ""
   location         : "Minneapolis"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=bIhJ-UkAAAAJ&hl=en&authuser=2"
